--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					Women make up more than 51% of the work force but only 26% of women occupied one of
 					the 3,816,00 computer-related occupations. Influenced by these numbers, we decided it would
 					be interesting to see the percentage of women employed for the Pixar films throughout the years. We found
-					unexpected trends from the data we gathered. Look at the graphs and see if you can find them as well. <br/> <br/>However, it is important to note that all of our data is sourced from imdb, which relies on self reporting, and not all departments are correlated to official Pixar departments. </p>
+					unexpected trends from the data we gathered. Look at the graphs and see if you can find them as well. <br/> <br/>However, it is important to note that all of our data is sourced from IMDB, which relies on self reporting, and not all departments are correlated to official Pixar departments. </p>
 				</div>
             </div>
         </div>
