--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading" class='graphHeading'>Average Men-Women Ratio per Department</h2>
+					<h3 class="graphHeading"> click on each section to see more!</h3>
                     <hr class="light">
                     <p class="text-faded"></p>
                 </div>
