--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 </div>
 				<div style="color:black; font-size: 20px">
 					<p id='moreInfo'> In 2009, 158.6 million women were living in the United States.
-					Women make up more than 51% of the work force but only 26% of women occupied one of
-					the 3,816,00 computer-related occupations. Influenced by these numbers, we decided it would
+					Women make up more than 51% of the U.S. work force; however, of
+					the 3,816,00 computer-related occupations in the country, only 26% are filled by women. Influenced by these numbers, we decided it would
 					be interesting to see the percentage of women employed for the Pixar films throughout the years. We found
 					unexpected trends from the data we gathered. Look at the graphs and see if you can find them as well. <br/> <br/>However, it is important to note that all of our data is sourced from IMDB, which relies on self reporting, and not all departments are correlated to official Pixar departments. </p>
 				</div>
@@ -1531,7 +1531,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class='thanks'>Special Thanks!</h2>
                     <hr class="primary">
-                    <p class='thanks'>Michael Frederickson<br/>Laura Savage<br/>
+                    <p class='thanks'>Michael Frederickson<br/>Laura Savidge<br/>
 					Jeff Stern<br/>
 					Leslie Li<br/>
 					Ilona Bodnar</p>
