--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading" >Learn More</h2>
+                    <h2 class="firstheading" >Learn More</h2>
 					<hr class="light">
                     <p class="text-faded"></p>
                 </div>
@@ -1420,7 +1420,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Creators</h2>
+                    <h2 class="thanks">Creators</h2>
                     <hr class="primary">
                 </div>
             </div>
