Movie names changed

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div id="info"></div>
 		<div id="totalGender">
 			        <div id="totalGender">
-		<h1 style="font-size: 50px;">How has Pixar's gender ratio changed over the last 20 years?<br/><br/>How have the number of women in each department changed over time?</h1>
+		<h1 style="font-size: 50px;">How has Pixar's gender ratio changed over the last 20 years?<br/><br/>How has the number of women in each department changed over time?</h1>
     </header>    
 	
 	<section class= 'bg-primary' id="learnMore">
