changed genderize color

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 					the 3,816,000 computer-related occupations in the country, only 26% are filled by women. Influenced by these numbers, we decided it would
 					be interesting to see the percentage of women employed for the Pixar films throughout the years. We found
 					unexpected trends from the data we gathered. Look at the graphs and see if you can find them as well. <br/> <br/>However, it is important to note that all of our data is sourced from IMDB,
-					which relies on self reporting, and not all departments are correlated to official Pixar departments. <br/> <br/> IMDB does not provide the gender of crew members, so we used an API called <a href="genderize.io" target="_blank">genderize</a> to determine their gender. This API is approximately 90% accurate, so there may be some errors in the data.</p>
+					which relies on self reporting, and not all departments are correlated to official Pixar departments. <br/> <br/> IMDB does not provide the gender of crew members, so we used an API called <a href="https://genderize.io/" target="_blank" style="color: black">genderize</a> to determine their gender. This API is approximately 90% accurate, so there may be some errors in the data.</p>
 				</div>
             </div>
         </div>
